--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,7 @@ textarea {
 }
 
 body {
+    background-repeat: no-repeat;
     background-size: 100vw 100vh;
     height: 100vh;
     margin-bottom: 0;
@@ -105,21 +106,20 @@ svg {
 
 #dim-container {
     background-color: black;
-    height: 100%;
     opacity: 0.6;
-    width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 #player-circle-container {
     border-radius: 50%;
     border: 1px solid white;
-    bottom: 20%;
     display: flex;
     justify-content: center;
-    left: 35.5555%;
-    position: absolute;
-    right: 35.5555%;
-    top: 20%;
+    margin: auto;
 }
 
 #vertical-buttons {
@@ -137,7 +137,6 @@ svg {
     flex-direction: row;
     height: 100%;
     justify-content: space-between;
-    position: absolute;
     width: 100%;
     z-index: 1;
 }
@@ -147,7 +146,7 @@ svg {
     border: none;
     cursor: pointer;
     outline: none;
-    padding: 15px;
+    padding: 10px;
     z-index: 2;
 }
 
@@ -155,17 +154,12 @@ svg {
     align-items: center;
     border-radius: 50%;
     border: 1px solid white;
-    bottom: 60px;
     color: white;
     display: flex;
     flex-direction: column;
     font-size: 12px;
     justify-content: center;
-    left: 60px;
-    position: absolute;
-    right: 60px;
     text-align: center;
-    top: 60px;
 }
 
 #song-time {
@@ -194,7 +188,8 @@ svg {
     display: none;
     flex-direction: column;
     justify-content: center;
-    position: absolute;
+    margin: auto;
+    width: 60%;
     z-index: 1;
 }
 
@@ -202,15 +197,15 @@ svg {
     border-bottom: 1px solid white;
     border-top: 1px solid white;
     text-align: center;
-    width: 100%;
 }
 
 #playlist-content h6 {
+    display: block;
     margin-bottom: 20px;
 }
 
-#playlist-top-line {
-    margin-bottom: 0;
+#playlist-divider {
+    margin: 0;
     width: 100%;
 }
 
@@ -221,110 +216,6 @@ svg {
 .tooltip > .tooltip-inner {
     background-color: white;
     color: black;
-}
-
-/* ==========================================================================
-   Responsiveness
-   ========================================================================== */
-/* Smartphones S (landscape) ----------- */
-@media only screen
-and (min-width : 321px) {
-    #player-circle-container {
-        bottom: 20%;
-        left: 35.5555%;
-        right: 35.5555%;
-        top: 20%;
-    }
-}
-
-/* Smartphones S (portrait) ----------- */
-@media only screen
-and (max-width : 320px) {
-    #player-circle-container {
-        bottom: 17.7777%;
-        left: 10%;
-        right: 10%;
-        top: 17.7777%;
-    }
-
-    #playlist-container {
-        bottom: 17.7777%;
-        left: 10%;
-        right: 10%;
-        top: 17.7777%;
-    }
-}
-
-/* Smartphones M (landscape) ----------- */
-@media only screen
-and (min-width : 376px) {
-    #player-circle-container {
-        bottom: 15%;
-        left: 26.6666%;
-        right: 26.6666%;
-        top: 15%;
-    }
-
-    #playlist-container {
-        bottom: 15%;
-        left: 26.6666%;
-        right: 26.6666%;
-        top: 15%;
-    }
-}
-
-/* Smartphones M (portrait) ----------- */
-@media only screen
-and (max-width : 375px) {
-    #player-circle-container {
-        bottom: 17.7777%;
-        left: 10%;
-        right: 10%;
-        top: 17.7777%;
-    }
-
-    #playlist-container {
-        bottom: 17.7777%;
-        left: 10%;
-        right: 10%;
-        top: 17.7777%;
-    }
-}
-
-/* Desktops and laptops ----------- */
-@media only screen
-and (min-width : 1224px) {
-    #player-circle-container {
-        bottom: 20%;
-        left: 35.5555%;
-        right: 35.5555%;
-        top: 20%;
-    }
-
-    #playlist-container {
-        bottom: 20%;
-        left: 35.5555%;
-        right: 35.5555%;
-        top: 20%;
-    }
-}
-
-/* Large screens ----------- */
-@media only screen
-and (min-width : 1824px) {
-    #player-circle-container {
-        bottom: 20%;
-        left: 35.5555%;
-        right: 35.5555%;
-        top: 20%;
-    }
-
-    #playlist-container {
-        bottom: 20%;
-        left: 35.5555%;
-        right: 35.5555%;
-        top: 20%;
-    }
 }
 
 /* ==========================================================================
